--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["David Wong <davidwg@calibra.com>"]
 edition = "2018"
 
 [dependencies]
-
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
