--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "specification"
+description = "heyhey"
 url = ""
 github = ""
 shortName = ""
@@ -10,3 +11,5 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
+askama = "0.10"     # to print the result as HTML
+clap = "2.33"
