--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ authors = ["David Wong <davidwg@calibra.com>"]
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-toml = "0.5"
-askama = "0.10"     # to print the result as HTML
-clap = "2.33"
+serde = { version = "1.0", features = ["derive"] } # deserialize toml
+toml = "0.5" # deserialize toml
+askama = "0.10"     # HTML template
+clap = "2.33" # CLI
+comrak = "0.9" # markdown
