working on example

--- a/Specification.toml
+++ b/Specification.toml
@@ -1,8 +1,10 @@
-[specification]
+[metadata]
 name = "Cargo-specification"
 description = "This specification describes how the command-line utility cargo-specification works."
 version = "0.1.0"
 authors = ["David Wong"]
 
 [sections]
-overview = ["src/comment_parser.rs"]
+overview = ["src/main.rs"]
+toml_parser = ["src/toml_parser.rs"]
+parser = ["src/comment_parser.rs"]
