--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] } # deserialize toml
-toml = "0.5" # deserialize toml
+toml = { version = "0.5", features = ["preserve_order"] } # deserialize toml
 askama = "0.10.5"     # HTML template
 clap = "2.33" # CLI
 comrak = "0.11.0" # markdown
