fix order of sequences in toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ toml = { version = "0.5.8", features = ["preserve_order"] } # deserialize toml
 askama = "0.11.0"     # HTML template
 clap = "3.0.1" # CLI
 comrak = "0.12.1" # markdown
+indexmap = { version = "1.7.0", features = ["serde-1"] }
