--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "cargo-spec"
-description = "heyhey"
+description = "A tool to specify your code."
 version = "0.1.0"
-authors = ["David Wong <davidwg@calibra.com>"]
+authors = ["David Wong <david@o1labs.org>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 askama = "0.11.0" # HTML template
