--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: produce spec
         run: |
-          cargo run -- --output-format respec
+          cargo run -- spec --output-format respec
           mkdir dist
           mv specification.html dist/index.html
 
