--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-
+          
       - uses: taiki-e/github-actions/install-rust@main
         with:
           toolchain: stable
@@ -79,7 +79,7 @@ jobs:
 
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
-          bin: specify
+          bin: cargo-spec
           target: ${{ matrix.target }}
           tar: all
           zip: windows
